# meeting-summarizer

./: .gitignore  README.md  fast_video_app.py  requirements.txt  setup.bat  setup.py  transcript_summarization_colab.ipynb
ANDROID/: README.md  local.properties  settings.gradle.kts
ANDROID/app/: build.gradle.kts  proguard-rules.pro
ANDROID/app/src/main/: AndroidManifest.xml
ANDROID/app/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
ANDROID/app/src/main/java/com/meetingsummarizer/: AudioProcessor.kt  AudioRecorder.kt  MainActivity.kt  ModelDownloader.kt  T5Summarizer.kt  TranscriptionService.kt  WhisperLib.kt
ANDROID/app/src/main/res/drawable/: card_background.xml
ANDROID/app/src/main/res/layout/: activity_main.xml
ANDROID/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
ANDROID/app/src/main/res/xml/: file_paths.xml
src/: __init__.py  fast_transcriber.py  oriserve_transcriber.py  summarizer.py  video_processor.py
